# tempro

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_BN.md  admin_manager.py  api_documentation.md  api_handler.py  auto_fix.py  bot.py  bot_commands.md  bot_handlers.py  bot_verification.py  config.json.example  database.py  database_schema.sql  docker-compose.yml  fix_installation.sh  install.sh  main.py  menu.py  pyproject.toml  rate_limiter.py  requirements-dev.txt  requirements.txt  run.sh  setup.py  setup_wizard.py  social_manager.py  support  tempro_db.py  termux-install.sh  termux_main.py  updated_main.py  upload_to_github.sh  utils.py  windows-install.bat
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  deploy.yml
assets/: banner.txt  instructions.txt
config/: admins.json  bot_mode.json  channels.json  pirjadas.json  social_links.json
docs/: index.md
src/: admin_manager.py  analytics.py  api_handler.py  backup_manager.py  bot_handlers.py  bot_verification.py  broadcast_manager.py  cache_manager.py  channel_manager.py  config.py  database.py  email_validator.py  init.py  main.py  notification_manager.py  social_manager.py
